[package]
name = "craftinginterpreters-lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
polonius-the-crab = "0.4.1"
replace_with = "0.1.7"
thiserror = "1.0.56"
